2009-03-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated PO template.

2009-03-17  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/manage_config.php: Select dependant modules when an
	alert is selected.

	* include/functions_agents.php: Copy selected alerts on
	process_manage_config().

2009-03-16  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* general/logoff.php: Cleaned up invalid html

	* general/login_page.php: Clean up ampersands
	
	* include/functions_html.php: Fixes bug #2661439
	
	* index.php: Style cleanup
	
	* godmode/modules/manage_network_templates.php: Export function
	gives a CSV file of the templates. Import pending although you
	can use it already to import back into pure SQL.

2009-03-16  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/help/en/help_planned_downtime.php,
	include/help/es/help_planned_downtime.php: Added more information
	about the scheduled downtime.

2009-03-16  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/alert_list.php,
	godmode/agentes/module_manager_editor_network.php: Fixes to work in
	IE7.

	* godmode/alerts/configure_alert_template.php: Fixed an error when the
	template was not created and causing the example or field values to
	not shown. Fixed javascript for IE7.

	* include/styles/ie.css: Fixes for IE7.

	* include/styles/pandora.css: Added style for classes added.	

2009-03-13  Esteban Sanchez  <estebans@artica.es>

	* godmode/db/db_purge.php: Style correction.

	* godmode/modules/manage_nc_groups.php: Complete rewritten.

	* godmode/modules/manage_nc_groups_form.php: Use pandora functions.
	Needs more love.

	* godmode/reporting/map_builder.php: Some fixes to make it work in
	IE7. 

	* include/javascript/jquery.pandora.controls.js: Execute automatically
	instead of on ready. Typo fixed that was not allowing to work on IE.

	* include/styles/ie.css: Bit of style corrections.
